--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -4,6 +4,7 @@
 <% if (user) { %>
 	<h1>posts</h1>
 	<a href="/accounts/<%= user.name %>">My Account</a>
+	<a href="/accounts">Accounts</a>
 <% }; %>
 
 <%- include('../partials/footer') %>
