Add post model. Add user ability to create, delete, and view post.

--- a/views/accounts/index.ejs
+++ b/views/accounts/index.ejs
@@ -3,8 +3,7 @@
 
     <% accounts.forEach(function(e){ %>
         <ul>
-            <li><%= e.name %></li>
-            <li><%= e.email %></li>
+            <li><a href="accounts/<%= e.name %>"><%= e.name %></a></li>
         </ul>
     <% }); %>
 
