--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,10 +1,15 @@
 
 <%- include('../partials/header') %>
 
-<% if (user) { %>
 	<h1>posts</h1>
-	<a href="/accounts/<%= user.name %>">My Account</a>
-	<a href="/accounts">Accounts</a>
-<% }; %>
+
+	<% posts.forEach(function(p){ %>
+        <ul>
+            <li><%= p.title %></li>
+			<li><img src="<%= p.image %>" alt="Post-Image" style="width: 300px;"></li>
+            <li><%= p.caption %></li>
+			<li>posted by: <a href="/accounts/<%= p.accountName %>"><%= p.accountName %></a></li>
+        </ul>
+    <% }); %>
 
 <%- include('../partials/footer') %>
