--- a/views/accounts/show.ejs
+++ b/views/accounts/show.ejs
@@ -1,10 +1,10 @@
 
 <%- include('../partials/header') %>
 
-<h1><%= account.name %></h1>
+<h1><%= account.handle %></h1>
 
-<h5><%= account.email %></h5>
-<h5><%= account.avatar %></h5>
+<img src="<%= account.avatar %>" alt="Avater" style="width: 300px;">
+<h5><%= account.name %></h5>
 
 <h2>Posts</h2>
 
