--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
   <nav>
     <ul>
       <li><a href="/posts/new">New Post</a></li>
-      <li><a href="/accounts/<%= user.name %>">My Account</a></li>
+      <li><a href="/accounts/<%= user.handle %>">My Account</a></li>
       <li><a href="/accounts">Accounts</a></li>
       <li><a href="/posts">Posts</a></li>
       <li><a href="/logout">Log Out</a></li>
