--- a/views/accounts/index.ejs
+++ b/views/accounts/index.ejs
@@ -1,9 +1,9 @@
 
 <%- include('../partials/header') %>
 
-    <% accounts.forEach(function(e){ %>
+    <% accounts.forEach(function(a){ %>
         <ul>
-            <li><a href="accounts/<%= e.name %>"><%= e.name %></a></li>
+            <li><a href="accounts/<%= a.handle %>"><%= a.handle %></a></li>
         </ul>
     <% }); %>
 
