--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -2,11 +2,20 @@
 <%- include('../partials/header') %>
 
 <h1><%= post.title %></h1>
+<a href="/accounts/<%= post.handle %>"><%= post.handle %></a>
 
     <li><img src="<%= post.image %>" alt="Post-Image" style="width: 600px;"></li>
     <li><%= post.caption %></li>
 
 <h2>Comments</h2>
+
+<form action="/posts/<%= post._id %>/comments" method="POST">
+    <label>Comment:
+        <input type="text" name="content" required>
+    </label>
+
+    <button type="submit">Comment</button>
+</form>
 
 <% if(comments){ %>
     <% comments.forEach(function(c){ %>
@@ -14,7 +23,10 @@
         <ul>
             <li><%= c.content %></li>
             <li>Commented by: <a href="/accounts/<%= c.handle %>"><%= c.handle %></a></li>
+            <li>Commented on: <%= c.time.toISOString().slice(0,16).replace('T', ' - '); %></li>
             <% if(c.handle === user.handle) { %>
+                <a href="/comments/<%= c._id %>/edit">Edit</a>
+
                 <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
                     <button type="submit">Delete Comment</button>
                 </form>
@@ -22,16 +34,6 @@
         </ul>
 
     <% }); %>
-<% }; %>
-
-<% if(post.account !== user._id){ %>
-    <form action="/posts/<%= post._id %>/comments" method="POST">
-        <label>Comment:
-            <input type="text" name="content" required>
-        </label>
-
-        <button type="submit">Comment</button>
-    </form>
 <% }; %>
 
 
