--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,12 +10,12 @@
 <body>
   <nav>
     <ul>
-      <li><a href="/accounts">Accounts</a></li>
+      <li><a href="/accounts">Profiles</a></li>
       <li><a href="/posts">Posts</a></li>
       
       <% if(user){ %>
         <li><a href="/posts/new">New Post</a></li>
-        <li><a href="/accounts/<%= user.handle %>">My Account</a></li>
+        <li><a href="/accounts/<%= user.handle %>">My Profile</a></li>
         <li><a href="/logout">Log Out</a></li>
       <% }else{ %>
         <li><a href="/login">Log In</a></li>
