--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -3,25 +3,32 @@
 
 <h1><%= post.title %></h1>
 <div class="post-show">
+    <hr>
     <div>
         <p>Posted by: <a href="/accounts/<%= post.handle %>"><%= post.handle %></a></p>
         <img src="<%= post.image %>" alt="Post-Image">
         <p><%= post.caption %></p>
 
     <hr>
-    <h4><%= comments.length %> Comments</h4>
+
+    <% if(comments.length == 1) { %>
+        <h4><%= comments.length %> Comment</h4>
+    <% }else{ %>
+        <h4><%= comments.length %> Comments</h4>
+    <% }; %>
 
     <% if(user){ %>
-        <form action="/posts/<%= post._id %>/comments" method="POST">
-            
-            <input type="text" name="content" placeholder="Comment" required>
-        
-            <button type="submit">Comment</button>
-        </form>
+            <form action="/posts/<%= post._id %>/comments" method="POST">
+
+                <input type="text" name="content" placeholder="Comment" required>
+                <div class="ps-comment-controls">
+                    <button class="ps-comment-btn" type="submit">Comment</button>
+                </div>
+            </form>
     <% }; %>
 
     <% if(comments){ %>
-        <% comments.forEach(function(c){ %>
+        <% comments.reverse().forEach(function(c){ %>
 
             <ul>
                 <li class="ps-comment-user" ><a href="/accounts/<%= c.handle %>"><%= c.handle %></a> - <%= c.time.toISOString().slice(0,16).replace('T', ' - ') %></li>
