--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Document</title>
 </head>
 <body>
-    <a href="/auth/google">Login with Google</a>
+    <div class="login">
+        <h2>Login with Google</h2>
+        <a href="/auth/google"><img src="/images/google.jpg" alt="Google"></a>
+    </div>
 </body>
 </html>
