--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title></title>
+  <title>Carstagram</title>
 </head>
 <body>
   <nav id="navbar">
     <ul>
-      <li><a href="/posts">Posts</a></li>
       <li><a href="/accounts">Profiles</a></li>
+      <li><a href="/posts">Posts</a></li>
       
       <% if(user){ %>
           <li id="profile" class="dropbtn">
