--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,6 +54,29 @@ button:active :not(nav){
   border: solid black 1px;
 }
 
+.file-upload{
+  border: 1px solid #112d4e;
+  background-color: #112d4e;
+  color: #f9f7f7;
+  border-radius: 3px;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  transition: .4s;
+}
+
+.file-upload:hover{
+border: 1px solid #112d4e;
+background-color: #f9f7f7;
+color: #112d4e;
+}
+
+.file-upload:active{
+border: 1px solid #f9f7f7;
+background-color: #112d4e;
+color: #f9f7f7;
+}
+
 input{
   background-color: #f9f7f7;
   border: none;
@@ -132,6 +155,11 @@ nav li a:hover{
 
 .post{
   padding: 10px 0;
+}
+
+.post-message{
+  text-align: center;
+  color: darkgrey;
 }
 
 div.post ul{
@@ -249,7 +277,7 @@ div.post-show h4{
 /* ----------------------------------------------------- Accounts */
 
 div.accounts-holder{
-  margin-top: 100px;
+  padding: 50px 0;
 }
 
 div.accounts{
@@ -384,7 +412,60 @@ div.login img{
   background-color: white;
 }
 
+div.np input{
+  margin: 20px 0;
+}
 
+div.np input[type='text']{
+  text-align: center;
+}
+
+div.np input[type='file']{
+  display: none;
+  background-color: white;
+}
+
+/* ---------------------------------------------------- Edit Account */
+
+.pd h1{
+  margin-top: 100px;
+}
+
+.pd div{
+  width: 50%;
+  margin: 100px auto 50px auto;
+  padding: 40px 30px 20px 30px;
+  box-shadow: 1px 1px 2px grey;
+  border-radius: 3px;
+  text-align: center;
+  background-color: white;
+}
+
+div.pd input{
+  margin: 20px 0;
+}
+
+div.pd input[type='text']{
+  text-align: center;
+}
+
+div.pd input[type='file']{
+  display: none;
+  background-color: white;
+}
+
+div.pd button{
+  margin-top: 40px;
+  padding: 15px 25px;
+}
+
+div.pd label{
+  margin-bottom: 15px;
+}
+
+div.pd p{
+  font-weight: bold;
+}
 
 /* ---------------------------------------------------- ids */
 
