--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -14,6 +14,10 @@
 				</ul>
 			</div>
 		<% }); %>
+
+		<% if(posts.length == 0) { %>
+			<h2 class="post-message">No one has posted anything yet...</h2>
+		<% }; %>
 	<% } %>
 
 <%- include('../partials/footer') %>
