--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -5,17 +5,19 @@
     <h1>new post</h1>
     <div>
         <form action="/posts" method="POST" enctype="multipart/form-data">
-            <label>Title:
-                <input type="text" name="title" required>
-            </label><br>
-        
-            <label>Image:
+
+            <label class="file-upload">
                 <input type="file" name="image" required>
+                Select Image
             </label><br>
+
+                <input type="text" name="title" placeholder="Title" required>
+
+                <br>
         
-            <label>Caption:
-                <input type="text" name="caption" required>
-            </label><br>
+                <input type="text" name="caption" placeholder="Caption" required>
+
+                <br>
         
             <button type="submit">Post</button>
         </form>
