--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -16,7 +16,7 @@
 		<% }); %>
 
 		<% if(posts.length == 0) { %>
-			<h2 class="post-message">No one has posted anything yet...</h2>
+			<h2 class="page-message">No one has posted anything yet...</h2>
 		<% }; %>
 	<% } %>
 
