--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ body{
   padding: 0;
   min-height: 100%;
   position: relative;
+  font-family: 'Libre Franklin', sans-serif;;
 }
 
 h1{
@@ -52,6 +53,11 @@ button:active :not(nav){
   background-color: black;
   color: #f9f7f7;
   border: solid black 1px;
+}
+
+.page-message{
+  text-align: center;
+  color: darkgrey;
 }
 
 .file-upload{
@@ -157,11 +163,6 @@ nav li a:hover{
   padding: 10px 0;
 }
 
-.post-message{
-  text-align: center;
-  color: darkgrey;
-}
-
 div.post ul{
   list-style: none;
   width: 40%;
@@ -214,7 +215,7 @@ div.post li p{
 div.post-show div{
   margin: 0 auto;
   width: 90%;
-  padding-top: 10px;
+  padding: 10px 0 30px 0;
 }
 
 div.post-show img{
@@ -344,6 +345,7 @@ div.ac-posts img{
 div.ac-posts p{
   padding: 10px;
   margin: 0;
+  word-wrap: break-word;
 }
 
 div.ac-posts .ac-post-control{
@@ -423,6 +425,36 @@ div.np input[type='text']{
 div.np input[type='file']{
   display: none;
   background-color: white;
+}
+
+/* ------------------------------------------------------ Edit post */
+
+.ep h1{
+  margin-top: 100px;
+}
+
+.ep div{
+  width: 50%;
+  margin: 100px auto 50px auto;
+  padding: 40px 30px 20px 30px;
+  box-shadow: 1px 1px 2px grey;
+  border-radius: 3px;
+  text-align: center;
+  background-color: white;
+}
+
+div.ep input{
+  margin: 20px 0;
+}
+
+div.ep input[type='text']{
+  text-align: center;
+  width: 50%;
+}
+
+div.ep button{
+  margin-top: 40px;
+  padding: 15px 25px;
 }
 
 /* ---------------------------------------------------- Edit Account */
