--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,18 +1,27 @@
 
 <%- include('../partials/header') %>
 
+<div class="ep">
+
 <h1>Edit Post</h1>
 
-<form action="/posts/<%= post._id %>?_method=PUT" method="POST">
-    <label>Title:
-        <input type="text" name="title" value="<%= post.title %>" required>
-    </label>
-    <br>
-    <label>Caption:
-        <input type="text" name="caption" value="<%= post.caption %>" required>
-    </label>
+    <div>
+        <form action="/posts/<%= post._id %>?_method=PUT" method="POST">
 
-    <input type="submit" value="Save changes">
-</form>
+            <p>Title</p>
+            <input type="text" name="title" value="<%= post.title %>" maxlength="40" required>
+
+            <hr>
+
+            <p>Caption</p>
+            <input type="text" name="caption" value="<%= post.caption %>" required>
+
+            <hr>
+
+            <button type="submit">Save Changes</button>
+        </form>
+    </div>
+
+</div>
 
 <%- include('../partials/footer') %>
