--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -11,7 +11,7 @@
                 Select Image
             </label><br>
 
-                <input type="text" name="title" placeholder="Title" required>
+                <input type="text" name="title" placeholder="Title" maxlength="40" required>
 
                 <br>
         
